# NextTranslate

./: .gitignore  CLAUDE.md  flask-backend.spec  render.yaml  requirements.txt  start.bat
.claude/: settings.local.json
assets/css/: base.css  style.css
backend/: app.py
config/: glossary.json
docs/: SPEC-001-project-init.md  SPEC-002-ui-features.md  SPEC-003-translation-capabilities.md  SPEC-004-deepseek-proxy.md  SPEC-005-ppt-translation.md  SPEC-006-unified-translation.md  SPEC-007-pdf-translation-v2.md  SPEC-008-glossary-and-smart-translation.md  SPEC-009-screenshot-translation-display.md  SPEC-010-side-by-side-export.md  SPEC-011-realtime-selection-preview.md  SPEC-012-rust-integration.md  SPEC-013-web-deployment.md
frontend/templates/: translator.html
frontend/templates/desktop/: base.html
frontend/templates/shared/: base_core.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  flask.rs  lib.rs  main.rs
